--- a/docs/后台接口文档.md
+++ b/docs/后台接口文档.md
@@ -37,19 +37,19 @@
 + 请求方式
     POST
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-username|是|用户名
-password|是|用户密码
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| username | 是    | 用户名  |
+| password | 是    | 用户密码 |
 + 示例
 ```javascript
 {"username":"root","password","123456"}
 ```
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -67,10 +67,10 @@ error|操作失败
 + 参数说明
   无
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -85,10 +85,10 @@ error|操作失败
     GET
 + 参数说明
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -105,22 +105,33 @@ error|操作失败
 + 请求方式
   POST  
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-proName|是|产品名称
-oldPrice|是|老价格
-price|是|价格
-proDesc|是|产品描述
-size|是|产品尺寸
-statu|是|产品上下架
-num|是|用户库存
-brandId|是|归属品牌
+| 参数名称     | 是否必须 | 说明    |
+| -------- | ---- | ----- |
+| proName  | 是    | 产品名称  |
+| oldPrice | 是    | 老价格   |
+| price    | 是    | 价格    |
+| proDesc  | 是    | 产品描述  |
+| size     | 是    | 产品尺寸  |
+| statu    | 是    | 产品上下架 |
+| num      | 是    | 用户库存  |
+| brandId  | 是    | 归属品牌  |
 pic图片数组[{"picName":"24-1.png","picAddr":"product/24-1.png"},{"picName":"24-1.png","picAddr":"product/24-1.png"}]
+
+```javascript	
+数据格式展示
+picName1=1.png&picAddr1=product/1.png
+picName2=2.png&picAddr2=product/2.png
+picName3=3.png&picAddr3=product/3.png
+
+最终参数列表：
+brandId=7&proName=%E6%B5%8B%E8%AF%95%E5%95%86%E5%93%81&proDesc=%E6%B5%8B%E8%AF%95%E6%8F%8F%E8%BF%B0&num=444&size=30-40&oldPrice=1699&price=1999&productLogo=&picName0=/upload/product/473ed790-bd7a-11e7-9649-47e18d72e8d6.jpg&picName1=/upload/product/4932b850-bd7a-11e7-9649-47e18d72e8d6.jpg&picName2=/upload/product/4b7666c0-bd7a-11e7-9649-47e18d72e8d6.jpg
+```
+
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -134,16 +145,16 @@ error|操作失败
 + 请求方式
   POST  enctype="multipart/form-data"
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-pic1图片1
-pic2图片2
-pic3图片3
+  参数名称|是否必须|说明
+  --|--|--
+  pic1图片1
+  pic2图片2
+  pic3图片3
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -157,24 +168,24 @@ error|操作失败
 + 请求方式
   POST  
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-id |是|产品id
-proName|是|产品名称
-oldPrice|是|老价格
-price|是|价格
-proDesc|是|产品描述
-size|是|产品尺寸
-statu|是|产品上下架
-num|是|用户库存
-brandId|是|归属品牌
+| 参数名称     | 是否必须 | 说明    |
+| -------- | ---- | ----- |
+| id       | 是    | 产品id  |
+| proName  | 是    | 产品名称  |
+| oldPrice | 是    | 老价格   |
+| price    | 是    | 价格    |
+| proDesc  | 是    | 产品描述  |
+| size     | 是    | 产品尺寸  |
+| statu    | 是    | 产品上下架 |
+| num      | 是    | 用户库存  |
+| brandId  | 是    | 归属品牌  |
 pic图片数组[{"picName":"24-1.png","picAddr":"product/24-1.png"},{"picName":"24-1.png","picAddr":"product/24-1.png"}]
 
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -188,16 +199,16 @@ error|操作失败
 + 请求方式
   GET
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-page|是|页数
-pageSize|是|每页条数
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| page     | 是    | 页数   |
+| pageSize | 是    | 每页条数 |
 
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -233,14 +244,14 @@ error|操作失败
 + 请求方式
   POST
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-categoryName|是|分类名称
+| 参数名称         | 是否必须 | 说明   |
+| ------------ | ---- | ---- |
+| categoryName | 是    | 分类名称 |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -254,16 +265,16 @@ error|操作失败
 + 请求方式
   POST
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-id|是|分类id
-categoryName|是|分类名称
-isDelete|是|是否启用
+| 参数名称         | 是否必须 | 说明   |
+| ------------ | ---- | ---- |
+| id           | 是    | 分类id |
+| categoryName | 是    | 分类名称 |
+| isDelete     | 是    | 是否启用 |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -277,16 +288,16 @@ error|操作失败
 + 请求方式
   GET
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-page|是|页数
-pageSize|是|每页条数
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| page     | 是    | 页数   |
+| pageSize | 是    | 每页条数 |
 
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 [
@@ -330,17 +341,17 @@ error|操作失败
 + 请求方式
   POST 
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-brandName|是|品牌名称
-categoryId|是|所属分类id
-brandLogo|是|品牌logo图片地址
-hot|是|火热的品牌
+| 参数名称       | 是否必须 | 说明         |
+| ---------- | ---- | ---------- |
+| brandName  | 是    | 品牌名称       |
+| categoryId | 是    | 所属分类id     |
+| brandLogo  | 是    | 品牌logo图片地址 |
+| hot        | 是    | 火热的品牌      |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -354,14 +365,14 @@ error|操作失败
 + 请求方式
   POST  enctype="multipart/form-data"
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-pic1 图片
+  参数名称|是否必须|说明
+  --|--|--
+  pic1 图片
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -375,19 +386,19 @@ error|操作失败
 + 请求方式
   POST  enctype="multipart/form-data"
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-id|是|品牌id
-brandName|是|品牌名称
-categoryId|是|所属分类id
-brandLogo|是|品牌logo图片 (上传文件)
-isDelete|是|是否启用
-hot|是|火热的品牌
+| 参数名称       | 是否必须 | 说明              |
+| ---------- | ---- | --------------- |
+| id         | 是    | 品牌id            |
+| brandName  | 是    | 品牌名称            |
+| categoryId | 是    | 所属分类id          |
+| brandLogo  | 是    | 品牌logo图片 (上传文件) |
+| isDelete   | 是    | 是否启用            |
+| hot        | 是    | 火热的品牌           |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -401,16 +412,16 @@ error|操作失败
 + 请求方式
   GET
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-page|是|页数
-pageSize|是|每页条数
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| page     | 是    | 页数   |
+| pageSize | 是    | 每页条数 |
 
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 {
@@ -463,15 +474,15 @@ error|操作失败
 + 请求方式
   GET
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-page|是|页码
-pageSize|是|每页条数
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| page     | 是    | 页码   |
+| pageSize | 是    | 每页条数 |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
@@ -507,15 +518,15 @@ error|操作失败
 + 请求方式
   POST
 + 参数说明
-参数名称|是否必须|说明
---|--|--
-id|是|用户id
-isDelete|是|是否启停
+| 参数名称     | 是否必须 | 说明   |
+| -------- | ---- | ---- |
+| id       | 是    | 用户id |
+| isDelete | 是    | 是否启停 |
 + 返回说明
-参数|说明
---|--
-success|注册状态
-error|操作失败
+| 参数      | 说明   |
+| ------- | ---- |
+| success | 注册状态 |
+| error   | 操作失败 |
 + 示例
 ```javascript
 //success
